# rti-medtech-suite

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bash.in
.github/agents/: debugger.agent.md  extender.agent.md  implementer.agent.md  planner.agent.md  reviewer.agent.md
.github/copilot-memories/: repo-notes.md
docker/: build-base.Dockerfile  cloud-discovery-service.Dockerfile  medtech-app.Dockerfile  routing-service.Dockerfile  runtime-cpp.Dockerfile  runtime-python.Dockerfile
docs/agent/: README.md  incidents.md  workflow.md
docs/agent/implementation/: README.md  phase-1-foundation.md  phase-13-foxglove-bridge.md  phase-14-foxglove-bridge.md  phase-2-surgical.md  phase-20-multi-arm.md  phase-21-teleoperation.md  phase-3-dashboard.md  phase-4-alerts.md  phase-5-orchestration.md  phase-5-security.md  phase-6-security.md  phase-7-security.md  phase-nicegui-migration.md  phase-simulation-cli.md  phase-ui-modernization.md  revision-databus-terminology.md  revision-dds-consistency.md  revision-docker-build-workflow.md  revision-docker-network-topology.md  revision-domain-id-migration.md  revision-shared-package-consolidation.md  revision-ux-alignment.md
docs/agent/spec/: README.md  clinical-alerts.md  common-behaviors.md  documentation.md  foxglove-bridge.md  hospital-dashboard.md  multi-arm-orchestration.md  nicegui-migration.md  performance-baseline.md  procedure-orchestration.md  security.md  simulation-cli.md  surgical-procedure.md  teleoperation.md
docs/agent/vision/: README.md  capabilities.md  coding-standards.md  data-model.md  dds-consistency.md  documentation.md  nicegui-migration.md  performance-baseline.md  security.md  simulation-model.md  system-architecture.md  technology.md  tooling.md  ui-design-system.md  versioning.md  wan-testing-strategy.md
interfaces/: CMakeLists.txt
interfaces/domains/: .gitkeep  CloudDatabuses.xml  Domains.xml  HospitalDatabuses.xml  RoomDatabuses.xml  domains.xml
interfaces/idl/: .gitkeep  app_names.idl
interfaces/idl/clinical_alerts/: clinical_alerts.idl
interfaces/idl/common/: common.idl
interfaces/idl/devices/: devices.idl
interfaces/idl/hospital/: hospital.idl
interfaces/idl/imaging/: imaging.idl
interfaces/idl/monitoring/: monitoring.idl
interfaces/idl/orchestration/: orchestration.idl
interfaces/idl/surgery/: surgery.idl
interfaces/participants/: HospitalParticipants.xml  OrchestrationParticipants.xml  SurgicalParticipants.xml
interfaces/qos/: .gitkeep  Participants.xml  Patterns.xml  Snippets.xml  Topics.xml
interfaces/qos/transport/: Default.xml  Docker.xml
modules/hospital-dashboard/: README.md
modules/hospital-dashboard/dashboard/: __init__.py  __main__.py  dashboard.py  hospital_dashboard.py  nicegui_dashboard.py
modules/hospital-dashboard/procedure_controller/: __init__.py  __main__.py  controller.py  nicegui_controller.py  procedure_controller.py
modules/shared/medtech/: __init__.py  dds.py  gui_runtime.py  gui_service.py  gui_service_host.py  log.py  (+2 more)
modules/shared/src/: CMakeLists.txt  service_host.cpp
modules/surgical-procedure/: README.md  dds_init.py  procedure_context.py  procedure_context_service.py  room_nav.py
modules/surgical-procedure/robot-controller/: CMakeLists.txt  main.cpp  robot_controller.hpp  robot_controller_app.cpp
modules/surgical-procedure/robot_controller/: CMakeLists.txt  main.cpp  robot_controller.cpp  robot_controller.hpp  robot_controller_app.cpp  robot_controller_service.cpp  robot_controller_service.hpp
modules/surgical-procedure/robot_service_host/: CMakeLists.txt  main.cpp  robot_service_host.cpp  robot_service_host.hpp
resources/: CMakeLists.txt
resources/fonts/: .gitignore  .gitkeep  CMakeLists.txt
resources/images/: .gitkeep
resources/styles/: medtech-dark.qss  medtech.qss
scripts/: _run_test.py  benchmark.sh  ci.sh  run_operational_tests.sh  simulate_room.py
services/cloud-discovery-service/: CloudDiscoveryService.xml
services/observability/: prometheus.yml
services/routing/: RoutingService.xml
tests/: conftest.py  test_service.py
tests/gui/: test_design_tokens.py  test_digital_twin.py  test_hospital_dashboard.py  test_hospital_dashboard_app.py  test_hospital_dashboard_nicegui.py  test_init_theme.py  test_nicegui_digital_twin.py  test_nicegui_procedure_controller.py  test_nicegui_smoke.py  test_nicegui_unified_app.py  test_procedure_controller.py  test_room_nav.py  test_unified_app.py
tests/integration/: test_acceptance_multi_arm.py  test_acceptance_orchestration.py  test_acceptance_standalone.py  test_acceptance_ux.py  test_arm_assignment.py  test_camera_sim.py  test_cli_acceptance_sim.py  test_cli_hospital.py  test_cli_launch.py  test_cli_or.py  test_cli_scaffold.py  test_cli_split_gui.py  test_cli_topology.py  test_clinical_service_host.py  test_container_build.py  test_controller_arm_tracking.py  test_dds_consistency.py  test_device_telemetry.py  test_domain_isolation.py  test_dual_mode_services.py  test_durability.py  test_exclusive_ownership.py  test_multi_arm_isolation.py  test_multi_arm_orchestration.py  test_multi_instance.py  test_observability.py  test_operational_service_host.py  test_orchestration_e2e.py  test_partition_isolation.py  test_procedure_context.py  test_procedure_controller.py  test_qos_enforcement.py  test_robot_controller.py  test_robot_service_host.py  test_routing_service.py  test_vitals_sim.py
tests/lint/: check_app_names.py  check_dds_consistency.py  check_readme_sections.py
tests/logging/: CMakeLists.txt  test_init_logging.cpp  test_init_logging.py
tests/performance/: benchmark.py  conftest.py  metrics.py  test_benchmark.py
tests/qos/: CMakeLists.txt  test_app_names.cpp  test_app_names.py  test_qos_loading.cpp  test_qos_loading.py  test_robot_controller.cpp  test_service.cpp
tests/tools/: test_qos_checker.py
tools/: README.md  admin-console.md  dds-spy.md  partition-inspector.py  qos-checker.py
tools/medtech-diag/: diag.py
(+78 files in other folders)
